--- a/style.css
+++ b/style.css
@@ -15,22 +15,20 @@ a{
     width: 100%;
     max-width: 120rem;
     margin: 0 auto;
-    background-color: lightblue;
+    padding: 2rem;
 }
 
 /* header */
 .header{
     width: 100%;
-    /* background-color: lightcoral; */
     height: 5rem;
+    margin-bottom: 2rem;
 }
 .nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 5rem;
-    padding: 2rem;
-    border: 1px dotted gray;
 }
 .nav h1{
     font-size: 3.2rem;
@@ -49,5 +47,52 @@ a{
     font-size: 1.6rem;
 }
 
-
+/* main */
+.card-group{
+    display: flex;
+    flex-wrap: wrap;
+}
+@media(min-width: 375px){
+    .card-group{
+        justify-content: center;
+    }
+}
+@media(min-width: 640px){
+    .card-group{
+        justify-content: left;
+    }
+}
+.card{
+    position: relative;
+    width: 26rem;
+    height: 36rem;
+    border-radius: 6px;
+    /* background-color: #87DC9F; */
+    padding: 3rem;
+    margin-right: 2.5rem;
+    margin-bottom: 2.5rem;
+    background-color: lightgreen;
+}
+.title{
+    font-size: 2.2rem;
+    font-weight: 900;
+    letter-spacing: .5px;
+}
+.title::after{
+    content: '__';
+    display: block;
+    font-weight: 400;
+    margin-bottom: 2rem;
+}
+.author{
+    font-size: 1.6rem;
+    font-weight: 700;
+    letter-spacing: .5px; 
+}
+.page-count{
+    position: absolute;
+    font-size: 1.4rem;
+    font-weight: 400;
+    bottom: 2.4rem;;
+}
 
