--- a/style.css
+++ b/style.css
@@ -52,16 +52,6 @@ a{
     display: flex;
     flex-wrap: wrap;
 }
-@media(min-width: 375px){
-    .card-group{
-        justify-content: center;
-    }
-}
-@media(min-width: 640px){
-    .card-group{
-        justify-content: left;
-    }
-}
 .card{
     position: relative;
     width: 26rem;
@@ -72,6 +62,22 @@ a{
     margin-right: 2.5rem;
     margin-bottom: 2.5rem;
     background-color: lightgreen;
+}
+@media(max-width: 650px){
+    .card-group{
+        display: block;
+        margin: 0 auto;
+    }
+    .card{
+        display: block;
+        margin: 0 auto;
+        margin-bottom: 2.5rem;
+    }
+}
+@media(min-width: 65px){
+    .card-group{
+        justify-content: start;
+    }
 }
 .title{
     font-size: 2.2rem;
