Add behavior to open modal when user clicks 'Add Book'

--- a/style.css
+++ b/style.css
@@ -230,8 +230,10 @@ input:focus{
 }
 .cancel-btn{
     margin-right: 1rem;
+    background-color: #F3F3F4;
+    color: black;
 }
-.add-btn{
+#add-btn-1, #add-btn-2, #add-btn-3{
     background-color: rgb(93, 158, 255);
     color: white;
 }
