--- a/style.css
+++ b/style.css
@@ -130,11 +130,20 @@ a{
     font-weight: 700;
     letter-spacing: .5px; 
 }
-.pages{
-    position: absolute;
+.book-footer{
+    width: 18.4rem;
+    display: flex;
+    justify-content: space-between;
     font-size: 1.4rem;
     font-weight: 400;
-    bottom: 2.4rem;;
+    position: absolute;
+    bottom: 3rem;
+}
+.link{
+    text-decoration: underline;
+}
+.link:hover{
+    cursor: pointer;
 }
 
 /* modal */
