--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ a{
     display: none; /* toggle this */
     background-color: rgba(0, 0, 0, .95);
     position: absolute;
+    height: 100%;
     top: 0;
     left: 0;
     bottom: 0;
