--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ a{
         justify-content: start;
     }
 }
-.status{
+.status, .modal-status{
     margin-bottom: 1.4rem;
     display: flex;
     align-items: center;
@@ -153,7 +153,7 @@ label{
     color: rgb(179, 180, 184);
     cursor: pointer;
 }
-.modal .status{
+.modal-status{
     border: none;
     margin-top: 3rem;
 }
